# toph

./: .clang-format  CMakeLists.txt  README.md  compile.sh  generate_stubs.sh  main.py  pytoph.pyi
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: bindings.cpp  frame.cpp  frame.h  glad.c  main.cpp  main2.cpp  viewer.cpp  viewer.h
